# schneggi-sensor

./: .gitignore  CMakeLists.txt  Kconfig  MIGRATION_CHECKLIST.md  MIGRATION_STRATEGY.md  Makefile  README.md  prj.conf  prj_debug.conf  prj_debug_no_scd4x.conf  prj_no_scd4x.conf  prj_production.conf  prj_production_no_scd4x.conf  west.yml
.github/workflows/: main.yml
boards/: adafruit_feather_nrf52840.overlay  no_scd4x.overlay
case/: Ultimate_Box.scad  back.stl  bottom.stl  front.stl  top.stl
hardware/E73-2G4M08S1C-52840/: E73-2G4M08S1C-52840.kicad_pcb  E73-2G4M08S1C-52840.kicad_prl  E73-2G4M08S1C-52840.kicad_pro  E73-2G4M08S1C-52840.kicad_sch  E73-2G4M08S1C-52840.kicad_sch_old  fp-info-cache  fp-lib-table  schneggi_library.kicad_sym
hardware/base/: E73-2G4M08S1C-52840.kicad_pcb  E73-2G4M08S1C-52840.kicad_prl  E73-2G4M08S1C-52840.kicad_sch  E73-2G4M08S1C-52840.kicad_sch-bak  E73-2G4M08S1C-52840.xml  fp-info-cache  schneggi_library.kicad_sym
hardware/case/: bottom.stl  top.stl
hardware/co2/: fp-info-cache  schneggi_library.bak  schneggi_library.kicad_sym  schneggi_sensor_kicad7.kicad_pcb  schneggi_sensor_kicad7.kicad_prl  schneggi_sensor_kicad7.kicad_pro  schneggi_sensor_kicad7.kicad_sch  sym-lib-table
include/: co2_zcl_logic.h  rejoin_logic.h  sensor_logic.h  zb_dimmable_light.h  zb_mem_config_custom.h  zigbee_signal_logic.h
migration_logs/: v2.5.2_to_v2.6.0.md  v2.6.0_to_v2.7.0.md  v2.7.0_to_v2.8.0.md  v2.8.0_to_v2.9.2.md  v2.9.2_hardware_validation.md
scripts/: activate-ncs-toolchain.sh
src/: co2_zcl_logic.c  main.c  rejoin_logic.c  sensor_logic.c  zigbee_signal_logic.c
tests/unit/co2_zcl/: CMakeLists.txt  test_co2_zcl_logic.c
tests/unit/rejoin_logic/: CMakeLists.txt  test_rejoin_logic.c
tests/unit/zigbee_signal_logic/: CMakeLists.txt  run_tests.sh  test_signal_logic.c
(+118 files in other folders)
